2003-01-28	blytkerchan
	* jailtype.html: add words on pre-defined container types

2003-01-27	blytkerchan
	* jailtype.html: add words on pre-defined types

2003-01-26	blytkerchan
	* jail.css: define caption style
	* jailtype.html: add words about namespaces, classes, etc. and start
	on pre-defined types

	* TODO: new file
	* jailtype.html: ditto
	* jail.css: add definitions for h3, table.toc, p.notice, a.toc:link, a.toc:active and a.toc:visited.
	* jailop.html: add a lot of words :)
	* table.html: use the ``toc'' table class to define the style
	add a link to jailtype.html

2003-01-21	blytkerchan
	* *.html: link to jail.css stylesheet
	set anchor named "top"
	normalize use of headers (h1 for the first title, etc.)
	* *.html (except table.html): make a "back to top" link at the bottom
	* jail.css: new file
	* jailop.html: ditto

2003-01-20	blytkerchan
	* index.html: roll back to revision 1.10
	remove alignment from SF logo

	* poll.css: new style for result_table_title
	* poll_db.pl: remove trailing semicolon from table declaration
	* poll_response.pl: kill warning about uninitialized variable 
	* poll_result.pl: implement

2003-01-10	blytkerchan
	* poll_db.pl: new file
	* poll_result.pl: ditto
	* poll_http.pl: ditto
	* poll.pl: move all database-related functions and globals to poll_db.pl
	move the header and footer functions to poll_http.pl
	* poll_response.pl: ditto

	* jailust.answers.sql: normalize
	* jailust.examples.sql: ditto
	* jailust.questions.sql: ditto
	* poll.pl: put the question_id in the form
	* poll_response.pl: save the response to the database

2003-01-08	blytkerchan
	* poll.pl: re-introduce PROGID

	* poll.pl: give comment a name in stead of an id

	* index.html: let poll iframe have full height

	* jailust.questions.sql: fix syntax error

	* jailust.answers.sql: use checkbox in stead of radio
	* jailust.questions.sql: make question commentable

	* poll.pl: set names on radio buttons & check boxes.
