@@ -1,3 +1,6 @@
+2003-01-29	blytkerchan
+	* jailtype.html: add words about pre-defined associative container types
+
 2003-01-28	blytkerchan
 	* jailtype.html: add words on pre-defined container types
 
